Fixes issue with mobile spacing

--- a/_includes/components/search-results/OtherYears/styles.scss
+++ b/_includes/components/search-results/OtherYears/styles.scss
@@ -6,4 +6,15 @@
 .OtherYears-item {
   float: left;
   margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.OtherYears-title {
+  margin-right: 10px;
+  width: 100%;
+  float: left;
+
+  @media screen and (min-width: 900px) {
+    width: auto;
+  }
 }
